# weather-rs

./: Cargo.toml  LICENSE  Makefile  README.md  packages.txt  w6otx-say-wx.sh
.github/workflows/: build.yml
src/: abbreviations.rs  abbreviations.txt  lib.rs
src/tts/: announcements.rs  audio_conversion.rs  espeak.rs  google_tts.rs  mod.rs
