[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
espeakng-sys = "0.3"
base64 = "0.22"
rodio = "0.17"
hound = "3.5"
