[package]
name = "weather"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Weather application with text-to-speech support"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
espeakng-sys = "0.3"
base64 = "0.22"
rodio = "0.17"
hound = "3.5"
tempfile = "3.8"

[package.metadata.deb]
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2025, Christopher Hoover <ch@murgatroid.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A weather application with text-to-speech support.
Supports multiple TTS backends including espeak and Google TTS."""
depends = "$auto, libespeak-ng1"
section = "utility"
priority = "optional"
assets = [
    ["target/release/weather", "usr/bin/", "755"],
    ["target/release/speak-weather-espeak", "usr/bin/", "755"],
    ["target/release/speak-weather-google-tts", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/weather/", "644"],
]
